<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_Var" Id="{86340a5d-f727-45f2-b9dd-2cf31392677f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
END_VAR
VAR_GLOBAL
	// Pressure within the pumps
	nPressure: REAL := 1;
	// Whether the pump is on
	bPump: BOOL := FALSE;
	bValve : BOOL := FALSE;
	bLeakDetected : BOOL := FALSE;
	bBrokenPump : BOOL := FALSE;
	bReset: BOOL := FALSE;
	nPumpGain : LREAL := 0.01;
	nPassiveLoss : LREAL := 0.001;
	nValveLoss : LREAL := 0.02;
	nKp : LREAL := 0.001;
	nTn : LREAL := 0.1;
	nTv : LREAL := 0.1;
	nTd : LREAL := 0.1;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>